--- a/client/src/components/Workflow.css
+++ b/client/src/components/Workflow.css
@@ -49,14 +49,15 @@
   margin: 10% 0 78px 50%;
   padding-left: 30px;
   transform: translateX(-50%);
-  width: 20%;
-  height: 40%;
+  width: 40%;
+  height: 50%;
   box-sizing: border-box;
   background-color: #CCCCCC;
   border: 2px solid #333355;  
   border-radius: 3px;
   position: relative;
   line-height: 18px;
+  overflow-wrap: break-word;
   font-size: 14px;
   z-index: 3;
 }
