--- a/client/src/components/Workflow.css
+++ b/client/src/components/Workflow.css
@@ -17,17 +17,18 @@
   color: #61dafb;
 }
 
-.demo {
+/* .demo {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   justify-content: center;
-}
+} */
 
 .grid {
-  height: 600px;
-  width: 1000px;
+  height: calc(100vh - 151px);
+  position: relative;
+  display: flex;
 }
 
 #modal-container {
@@ -65,11 +66,6 @@
   content: "";
   clear: both;
   display: block;
-}
-
-.react-flow {
-  border: 3px solid #333355;
-  border-radius: 10px;
 }
 
 .react-flow__renderer {
