--- a/client/src/components/Workflow.css
+++ b/client/src/components/Workflow.css
@@ -26,7 +26,7 @@
 } */
 
 .grid {
-  height: calc(100vh - 151px);
+  height: calc(100vh - 112px);
   position: relative;
   display: flex;
 }
@@ -75,9 +75,9 @@
   justify-content: center;
 }
 
-.react-flow__pane {
+/* .react-flow__pane {
   box-shadow: 0px 0px 3px 2px inset #999999;
-}
+} */
 
 .react-flow__node {
   display: flex;
