--- a/client/src/components/Workflow.css
+++ b/client/src/components/Workflow.css
@@ -17,17 +17,18 @@
   color: #61dafb;
 }
 
-.demo {
+/* .demo {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   justify-content: center;
-}
+} */
 
 .grid {
-  height: 600px;
-  width: 1000px;
+  height: calc(100vh - 112px);
+  position: relative;
+  display: flex;
 }
 
 #modal-container {
@@ -67,11 +68,6 @@
   display: block;
 }
 
-.react-flow {
-  border: 3px solid #333355;
-  border-radius: 10px;
-}
-
 .react-flow__renderer {
   background-color: #eeeeee;
   display: flex;
@@ -79,9 +75,9 @@
   justify-content: center;
 }
 
-.react-flow__pane {
+/* .react-flow__pane {
   box-shadow: 0px 0px 3px 2px inset #999999;
-}
+} */
 
 .react-flow__node {
   display: flex;
