--- a/client/src/components/Workflow.css
+++ b/client/src/components/Workflow.css
@@ -69,10 +69,16 @@
 }
 
 .react-flow__renderer {
-  background-color: #eeeeee;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  /* background-color: #eeeeee; */
+  /* background-color: #f5f5f5; */
+  background-color: #f3f4f6;
+  /* background-color: #fafafa; */
+  /* display: flex; */
+  /* align-items: center; */
+  /* justify-content: center; */
+  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
 }
 
 /* .react-flow__pane {
@@ -80,38 +86,49 @@
 } */
 
 .react-flow__node {
-  display: flex;
-  justify-content: center;
-  margin: 0 2px 0 2px;
-  align-items: center;
-  color: #ffffff;
+  background-color: #fff;
+  padding: 10px;
+  width: 300px;
+  border-radius: 4px;
+
+  /* border: 2px solid #ededec; */
+  border: 1px solid#e5e7eb;
+  box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
+    rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+  /* box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1); */
+  /* box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1); */
+
+  /* display: flex; */
+  /* justify-content: center; */
+  /* margin: 0 2px 0 2px; */
+  /* align-items: center; */
+  /* color: #ffffff; */
   /* height: 150px; */
-  width: 200px;
-  font-size: 14px;
-  font-weight: 400;
-  padding: 0px 10px 0px 10px;
-  border-radius: 6px;
-  text-align: center;
+  /* font-size: 14px; */
+  /* font-weight: 400; */
+  /* padding: 0px 10px 0px 10px; */
+  /* border-radius: 6px; */
+  /* text-align: center; */
   cursor: move;
 }
 
 .react-flow__node-schedule {
-  background-color: #660000;
+  /* background-color: #660000; */
   /* border: 2px solid #553333; */
 }
 
 .react-flow__node-extract {
-  background-color: #660066;
+  /* background-color: #660066; */
   /* border: 2px solid #553355; */
 }
 
 .react-flow__node-transform {
-  background-color: #006666;
+  /* background-color: #006666; */
   /* border: 2px solid #335555; */
 }
 
 .react-flow__node-load {
-  background-color: #000066;
+  /* background-color: #000066; */
   /* border: 2px solid #333355; */
 }
 
