--- a/client/src/components/Workflow.css
+++ b/client/src/components/Workflow.css
@@ -4,7 +4,7 @@
   display: flex;
 }
 
-#modal-container {
+/* #modal-container {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -14,9 +14,9 @@
 }
 #modal-container:empty {
   display: none;
-}
+} */
 
-#modal {
+/* #modal {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -27,8 +27,7 @@
   height: 50%;
   box-sizing: border-box;
   background-color: #cccccc;
-  border: 2px solid #333355;
-  border-radius: 3px;
+  border-radius: 4px;
   position: relative;
   line-height: 18px;
   overflow-wrap: break-word;
@@ -40,7 +39,7 @@
   content: "";
   clear: both;
   display: block;
-}
+} */
 
 .react-flow__renderer {
   font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
