--- a/client/src/components/Workflow.css
+++ b/client/src/components/Workflow.css
@@ -20,7 +20,7 @@
   width: 300px;
   border-radius: 4px;
 
-  border: 1px solid#e5e7eb;
+  border: 1px solid #e5e7eb;
   box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
     rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
   cursor: move;
@@ -28,10 +28,13 @@
 
 .react-flow__edge-path {
   stroke: #a7a7ae !important;
+  stroke-width: 2 !important;
 }
 
 .react-flow__handle {
   background-color: #6e6e6e !important;
+  width: 8px !important;
+  height: 8px !important;
 }
 
 .react-flow__connection-path {
@@ -40,4 +43,8 @@
 
 .react-flow__attribution {
   display: none;
+}
+
+.react-flow__minimap {
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.08) !important;
 }
